# suggestion_for_leptos_book

./: .gitignore  README.md
leptos_starter/: Cargo.toml  Trunk.toml  index.html
leptos_starter/css/: finale.scss  global.scss
leptos_starter/css/animation/: backflip_animation.scss  bounce_animation.scss  simple_anim_box.scss
leptos_starter/css/animation/background_dots/: animation_fade_out.scss  general_styling.scss
leptos_starter/js/: calling_rust_from_js.js
leptos_starter/js/animation/: animator.js  background_dots.js
leptos_starter/js/finale/: js.js
leptos_starter/js/worker/: step2.js  worker.js
leptos_starter/public/: js.js
leptos_starter/src/: lib.rs
leptos_starter/src/animation/background_dots/: main.rs
leptos_starter/src/animation/simple_example/: main.rs
leptos_starter/src/animations/: mod.rs
leptos_starter/src/components/ui/: drag_and_drop.rs
leptos_starter/src/final_example/: js.js  js_stuff.rs  js_value_parsing.rs  main.rs  mod.rs
leptos_starter/src/for_enumerate/basic_example/: main.rs  main_broken.rs  worse_than_a_for_loop.rs
leptos_starter/src/for_enumerate/list_of_reactive_components/: main.rs
leptos_starter/src/routing/: mod.rs
leptos_starter/src/routing/basic_routing/: main.rs
leptos_starter/src/routing/folder_routing/: main.rs
leptos_starter/src/routing/folder_routing/page1_and_page2/: mod.rs
leptos_starter/src/routing/r1_basic_routing/: main.rs
leptos_starter/src/routing/r2_folder_routing/: main.rs  mod.rs
leptos_starter/src/routing/r3_routing_w_signals/: main.rs
leptos_starter/src/routing/r4_optional_signals/: main.rs
leptos_starter/src/rust_js/: mod.rs
leptos_starter/src/rust_js/calling_rust_from_js/: main.rs
leptos_starter/src/rust_js/rj1_calling_rust_from_js/: main.rs  this_no_work.rs
leptos_starter/src/rust_js/rj2_js_accesses_signals/: main.rs
leptos_starter/src/rust_js/rj3_cleaner_code/: handle_macro.rs  main.rs
leptos_starter/src/signals/: checkThis.txt
leptos_starter/src/signals/memo/: main.rs
leptos_starter/src/signals_n_routing/: Untitled.xcf
leptos_starter/src/sqlite/: mod.rs
leptos_starter/src/sqlite/gloo_worker/: shared.rs  test1.rs  worker.rs
leptos_starter/src/sqlite/just_javascript/: index.html
leptos_starter/src/sqlite/read_from/: black_magic.rs  create_sql_statements.rs  db_table.rs  main.rs  mod.rs  worker.rs
leptos_starter/src/sqlite/simple_worker/: instructions.txt  main.rs  old_code  simple_async.rs  worker.rs
leptos_starter/src/sqlite/step1_plain_html_js_worker/: javascript.js  no_rust.html  worker.js
leptos_starter/src/sqlite/step2_js_worker_calling_rust/: main.rs
leptos_starter/src/sqlite/step3_js_owns_a_wasm_file/: not_leptos.rs  rust_is_mine.js
leptos_starter/src/sqlite/step4_calling_async_rust_from_js/: black_magic.rs
leptos_starter/tests/: web.rs
leptos_starter_website/: Cargo.toml  enumerate example  index.html  useful_links
leptos_starter_website/css/: background.scss  glob_style.scss
leptos_starter_website/src/: background.rs  def_content.rs  main.rs
minimal_routing_example/: Cargo.toml
minimal_routing_example/src/: main.rs
minimal_routing_example/src/page1_and_page2/: page1.rs  page2.rs
