[package]
name = "leptos_starter"
version = "0.1.0"
edition = "2024"
# default-run = "basic_routing" instead of this edit the index.html


[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.19", features = ["csr"] }
leptos_router = "0.8.13"

[[bin]]
name = "folder_routing"
path = "src/routing/folder_routing/main.rs"


[[bin]]
name = "memo"
path = "src/signals/memo/main.rs"

[[bin]]
name = "basic_routing"
path = "src/routing/basic_routing/main.rs"
