[package]
name = "leptos_starter"
version = "0.1.0"
edition = "2024"
# default-run = "basic_routing" instead of this edit the index.html


[dependencies]
#anyhow = "1.0.103"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.4.3", features = ["wasm_js"] } #rand wouldn't work properly without this one
leptos = { version = "0.8.19", features = ["csr"] }
leptos_router = "0.8.13"
rand = "0.10.1"
tw_merge = "0.1.21"
wasm-bindgen = "0.2.126"
web-sys = { version = "0.3.103", features = ["DragEvent", "Element", "HtmlElement", "DomTokenList", "NodeList", "DomRect"] }

[[bin]]
name = "basic_routing"
path = "src/routing/r1_basic_routing/main.rs"

[[bin]]
name = "folder_routing"
path = "src/routing/r2_folder_routing/main.rs"

[[bin]]
name = "routing_with_signals"
path = "src/routing/r3_routing_w_signals/main.rs"

[[bin]]
name = "optional_signals"
path = "src/routing/r4_optional_signals/main.rs"

[[bin]]
name = "memo"
path = "src/signals/memo/main.rs"

[[bin]]
name = "calling_rust_from_js"
path = "src/rust_js/calling_rust_from_js/main.rs"

[[bin]]
name = "enumerate_basic"
path = "src/for_enumerate/basic_example/main.rs"

[[bin]]
name = "list_of_reactive_components"
path = "src/for_enumerate/list_of_reactive_components/main.rs"

[[bin]]
name = "finale"
path = "src/final_example/main.rs"
