[package]
name = "leptos_starter_website"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.19", features = ["csr"] }
leptos_router = "0.8.13"
ndarray = "0.15"
web-sys = { version = "0.3.102", features = ["Element"] }

[build-dependencies]
